--- a/my-website/i18n/pt-BR/docusaurus-theme-classic/footer.json
+++ b/my-website/i18n/pt-BR/docusaurus-theme-classic/footer.json
@@ -35,20 +35,20 @@
     "message": "Feed RSS",
     "description": "The title of the footer links column with title=RSS Feed in the footer"
   },
-  "link.item.label.🇬🇧 RSS - Personal Blog": {
-    "message": "🇬🇧 RSS - Personal Blog",
+  "link.item.label.🇬🇧 Personal": {
+    "message": "🇬🇧 Personal",
     "description": "The label of footer link with label=🇬🇧 RSS - Personal Blog linking to https://magmanu.github.io/blog/personal/rss.xml"
   },
-  "link.item.label.🇬🇧 RSS - Tech Blog": {
-    "message": "🇬🇧 RSS - Tech Blog",
+  "link.item.label.🇬🇧 Tech": {
+    "message": "🇬🇧 Tech",
     "description": "The label of footer link with label=🇬🇧 RSS - Tech Blog linking to https://magmanu.github.io/blog/tech/rss.xml"
   },
-  "link.item.label.🇧🇷 RSS - Blog Pessoal": {
-    "message": "🇧🇷 RSS - Blog Pessoal",
+  "link.item.label.🇧🇷 Pessoal": {
+    "message": "🇧🇷 Pessoal",
     "description": "The label of footer link with label=🇧🇷 RSS - Blog Pessoal linking to https://magmanu.github.io/blog/personal/rss.xml"
   },
-  "link.item.label.🇧🇷 RSS - Blog Tech": {
-    "message": "🇧🇷 RSS - Blog Tech",
+  "link.item.label.🇧🇷 Tech": {
+    "message": "🇧🇷 Tech",
     "description": "The label of footer link with label=🇧🇷 RSS - Blog Tech linking to https://magmanu.github.io/blog/personal/rss.xml"
   }
 }
